# serializer version: 1
# name: test_resources_read
  dict({
    'attributes': dict({
      'humidity': '65',
      'temperature': '0.9',
    }),
    'domain': 'light',
    'names': 'Kitchen',
    'state': 'on',
    'uri': 'entity_id://light.kitchen',
  })
# ---
# name: test_tools_call
  dict({
    'failed': list([
    ]),
    'success': list([
      dict({
        'id': 'light.kitchen',
        'name': 'Kitchen',
        'type': 'entity',
      }),
    ]),
    'targets': list([
    ]),
  })
# ---
# name: test_tools_list
  'HassTurnOn'
# ---
# name: test_tools_list.1
  'Turns on/opens a device or entity'
# ---
# name: test_tools_list.2
  dict({
    'type': 'string',
  })
# ---
